samples/_failures_safe/1761251026_22a129_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a4e1a72.c: In function ‘main’:
./samples/SAFE/__tmp_1a4e1a72.c:180:9: error: expected expression at end of input
  180 |         } else if (strcmp(input,
      |         ^
./samples/SAFE/__tmp_1a4e1a72.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a4e1a72.c:180:9: error: expected declaration or statement at end of input
